[project]
name = "code-review-crew"
version = "0.1.0"
description = ""
authors = [{name = "Harleen Hans", email = "harleenhans004@gmail.com"}]
requires-python = ">=3.10.0,<3.14"
dependencies = [
    "crewai[google-genai] (>=1.15.1,<2.0.0)",
    "unstructured>=0.14.3",
    "pyowm==3.3.0",
    "tools>=0.1.9",
    "python-dotenv (>=1.2.2)",
    "requests (>=2.34.2,<3.0.0)",
    "crewai-tools (>=1.15.1,<2.0.0)",
    "PyGithub (>=2.0.0,<3.0.0)",
]

[tool.pyright]
# https://github.com/microsoft/pyright/blob/main/docs/configuration.md
useLibraryCodeForTypes = true
exclude = [".cache"]

[tool.ruff]
# https://beta.ruff.rs/docs/configuration/
select = ['E', 'W', 'F', 'I', 'B', 'C4', 'ARG', 'SIM']
ignore = ['W291', 'W292', 'W293']
